1.修改下拉框，增加优化模式 2.增加过滤changes

--- a/src/maple.css
+++ b/src/maple.css
@@ -1,3 +1,10 @@
 #maple-header-checkbox:disabled {
     cursor: not-allowed;
 }
+.maple-readOnly {
+    cursor: not-allowed;
+    color: #c0c4cc;
+}
+.htInvalid {
+    color: white;
+}
