--- a/src/scoped.css
+++ b/src/scoped.css
@@ -5,12 +5,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     color: #c0c4cc;
-    border: 1px solid #ccc;
     position: absolute;
-    top: 0;
+    top: 27px;
     left: 0;
     z-index: 1105;
+    font-size: 18px;
 }
 .loading {
     position: absolute;
