--- a/src/maple.css
+++ b/src/maple.css
@@ -16,3 +16,19 @@
 .cursor {
     cursor: pointer;
 }
+.maple-up-arrow {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 12px solid #000;
+}
+.maple-down-arrow {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 12px solid #e91e63;
+}
