1.增加单选允许禁用 2.优化第三方组件单元格

--- a/src/scoped.css
+++ b/src/scoped.css
@@ -37,6 +37,9 @@
     stroke: #409eff;
     stroke-linecap: round;
 }
+#handsontable .handsontable .maple-custom-checkbox-td {
+    padding: 0;
+}
 @keyframes loading-rotate {
     to {
         transform: rotate(1turn);
